// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get dependency from clean state 1`] = `
Object {
  "name": "a",
  "range": Array [
    "^1.0.0",
  ],
  "registered": Array [
    Object {
      "dependencies": Array [],
      "id": "a@0.1.0",
      "name": "a",
      "source": "registry+vba-blocks#<hash>",
      "version": "0.1.0",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "d",
          "registry": "vba-blocks",
          "version": "^1.0.0",
        },
      ],
      "id": "a@1.0.0",
      "name": "a",
      "source": "registry+vba-blocks#<hash>",
      "version": "1.0.0",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "d",
          "registry": "vba-blocks",
          "version": "^1.2.0",
        },
      ],
      "id": "a@1.1.0",
      "name": "a",
      "source": "registry+vba-blocks#<hash>",
      "version": "1.1.0",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "d",
          "registry": "vba-blocks",
          "version": "^2",
        },
      ],
      "id": "a@1.2.0",
      "name": "a",
      "source": "registry+vba-blocks#<hash>",
      "version": "1.2.0",
    },
  ],
}
`;

exports[`should get dependency with existing 1`] = `
Object {
  "name": "a",
  "range": Array [
    "^1.0.0",
  ],
  "registered": Array [],
}
`;

exports[`should get registration 1`] = `
Object {
  "dependencies": Array [
    Object {
      "name": "d",
      "registry": "vba-blocks",
      "version": "^1.0.0",
    },
  ],
  "id": "a@1.0.0",
  "name": "a",
  "source": "registry+vba-blocks#<hash>",
  "version": "1.0.0",
}
`;

exports[`should include preferred with resolved 1`] = `
Object {
  "name": "a",
  "preferred": Object {
    "dependencies": Array [
      Object {
        "name": "d",
        "registry": "vba-blocks",
        "version": "^1.0.0",
      },
    ],
    "id": "a@1.0.0",
    "name": "a",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.0.0",
  },
  "range": Array [
    "^1.0.0",
  ],
  "registered": Array [
    Object {
      "dependencies": Array [],
      "id": "a@0.1.0",
      "name": "a",
      "source": "registry+vba-blocks#<hash>",
      "version": "0.1.0",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "d",
          "registry": "vba-blocks",
          "version": "^1.0.0",
        },
      ],
      "id": "a@1.0.0",
      "name": "a",
      "source": "registry+vba-blocks#<hash>",
      "version": "1.0.0",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "d",
          "registry": "vba-blocks",
          "version": "^1.2.0",
        },
      ],
      "id": "a@1.1.0",
      "name": "a",
      "source": "registry+vba-blocks#<hash>",
      "version": "1.1.0",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "d",
          "registry": "vba-blocks",
          "version": "^2",
        },
      ],
      "id": "a@1.2.0",
      "name": "a",
      "source": "registry+vba-blocks#<hash>",
      "version": "1.2.0",
    },
  ],
}
`;

exports[`should iterate through graph entries 1`] = `
Array [
  Array [
    "a",
    Object {
      "name": "a",
      "range": Array [
        "^1.0.0",
      ],
      "registered": Array [
        Object {
          "dependencies": Array [],
          "id": "a@0.1.0",
          "name": "a",
          "source": "registry+vba-blocks#<hash>",
          "version": "0.1.0",
        },
        Object {
          "dependencies": Array [
            Object {
              "name": "d",
              "registry": "vba-blocks",
              "version": "^1.0.0",
            },
          ],
          "id": "a@1.0.0",
          "name": "a",
          "source": "registry+vba-blocks#<hash>",
          "version": "1.0.0",
        },
        Object {
          "dependencies": Array [
            Object {
              "name": "d",
              "registry": "vba-blocks",
              "version": "^1.2.0",
            },
          ],
          "id": "a@1.1.0",
          "name": "a",
          "source": "registry+vba-blocks#<hash>",
          "version": "1.1.0",
        },
        Object {
          "dependencies": Array [
            Object {
              "name": "d",
              "registry": "vba-blocks",
              "version": "^2",
            },
          ],
          "id": "a@1.2.0",
          "name": "a",
          "source": "registry+vba-blocks#<hash>",
          "version": "1.2.0",
        },
      ],
    },
  ],
]
`;
